--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "2.14.4"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "2.14.4",
+    "@react-native-masked-view/masked-view": "0.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
