--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@fontsource/roboto": "^4.5.8",
+    "@gorhom/bottom-sheet": "^4",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "2.14.4",
-    "@react-native-masked-view/masked-view": "0.2.8"
+    "react-native-paper": "^5.7.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-select-dropdown": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
