--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/stack": "^6.3.16",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
@@ -26,10 +27,12 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.7.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-select-dropdown": "^3.3.3"
+    "react-native-select-dropdown": "^3.3.3",
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "postinstall": "node_modules/.bin/rn-nodeify --install crypto,fs,https --hack"
 }
